* A samldiff tool
* Minor fixes to align requirements for docker package

1.1.0
---
* Release date: fre 12 jul 2019 10:27:05 CEST
* simplify resource management and introduce new thread-based fetcher architecture
* new icon fetching infrastructure
* re-introduce predictive load order
* multiple bug fixes and cleanup
* documentation restructure and rewrite

1.1.1
---
* Release date: tor 18 jul 2019 16:05:54 CEST
* Fix bug affecting entityIDs with querystring components thx to Maja Wolniewicz <mgw@umk.pl>

1.1.2
---
* Release date: ons 19 feb 2020 14:35:45 CET
* Bugfixes
* Documentation updates

1.1.3
---
* Release date: ons 16 sep 2020 14:21:20 CEST
* Limited support for i18n in JSON export - alternative and primary language choices
* Bugfixes related to mime-type for metadata

1.1.4
---
* Release date: tor 17 sep 2020 00:50:42 CEST
* Bugfixes for language support
* Support for exposing multiple language tags in discojson

1.1.5
---
* Release date: tis  1 dec 2020 14:19:18 CET
* Remove dependency on minify

1.2.0 & 2.0.0
---
* Release date: tor  1 apr 2021 21:15:14 CEST
* 1.2.0 contains several bugfixes from 1.1.5
* 2.0.0 drops all frontend components and returns pyFFd to an API-only service

2.1.0
---
* Release date: ons  1 nov 2023 10:17:10 CET
* Support for metadata trust extensions
* Multiple bug-fixes
* Coverted to pydantic 2.4.x
* More typing

2.1.1
-----
* Fix MANIFEST issue that prevented install from sdist

2.1.2
-----
* Documentation updates related to sphinx
* Clarify semantics of trust info extension metadata
* Fix random seeding
* Fix for data handling related to non-Z timezones in metadata

2.1.3
-----
* Release date: tor 14 nov 2024 14:55:01 CET

* Add DiscoveryResponse info to SPs in discojson
* Remove cherrypy imports
* Fix logging
* suport SP trust metadata in an entity attribute as JSON blob

2.1.4
-----
* Release date: Tue May 27 07:29:08 CEST 2025

* Lots of cleanups, pyupgrade and linting fixes. 
* MDSL fixes

2.1.5
-----