@@ -6,11 +6,11 @@ To make a release,
   1) remove dev suffix on version in pyproject.toml
   2) set release date in NEWS.txt
   2b) update the version in docs/conf.py
-  3) commit the changes to setup.py and NEWS.txt
+  3) commit the changes to pyproject.toml and NEWS.txt
   4) git tag <version>
   5) git push && git push --tag
   6) cd docs && make html
-  6) Upload to PyPI: twine upload dist/pyFF-<version>.tar.gz
-  7) Increase version in pyproject.toml (for next release) with dev suffix
-  8) Create NEWS.txt entry for next release
+  7) uv build && uv publish
+  8) Increase version in pyproject.toml (for next release) with dev suffix
+  9) Create NEWS.txt entry for next release
 
