@@ -16,11 +16,15 @@ import sys
 import sphinx
 
 sys.path.insert(0, os.path.abspath('./../'))
-autodoc_mock_imports = ["alpha","beta"]
+autodoc_mock_imports = ["alpha", "beta"]
 
-#import sphinx.apidoc
+
+# import sphinx.apidoc
 def setup(app):
-    sphinx.ext.apidoc.main(['-f', '-T', '-e', '-M', '-o', './code/', '../src', '../src/localconfig.py', '../src/pyff/test'])
+    sphinx.ext.apidoc.main(
+        ['-f', '-T', '-e', '-M', '-o', './code/', '../src', '../src/localconfig.py', '../src/pyff/test']
+    )
+
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -59,7 +63,7 @@ copyright = '2012, Leif Johansson'
 # The short X.Y version.
 version = '2.1'
 # The full version, including alpha/beta/rc tags.
-release = '2.1.4'
+release = '2.1.6.dev0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -181,10 +185,8 @@ htmlhelp_basename = 'FederationFeederdoc'
 latex_elements = {
     # The paper size ('letterpaper' or 'a4paper').
     #'papersize': 'letterpaper',
-
     # The font size ('10pt', '11pt' or '12pt').
     #'pointsize': '10pt',
-
     # Additional stuff for the LaTeX preamble.
     #'preamble': '',
 }
@@ -192,8 +194,7 @@ latex_elements = {
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-    ('index', 'FederationFeeder.tex', 'Federation Feeder Documentation',
-     'Leif Johansson', 'manual'),
+    ('index', 'FederationFeeder.tex', 'Federation Feeder Documentation', 'Leif Johansson', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
@@ -221,10 +222,7 @@ latex_documents = [
 
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
-man_pages = [
-    ('index', 'federationfeeder', 'Federation Feeder Documentation',
-     ['Leif Johansson'], 1)
-]
+man_pages = [('index', 'federationfeeder', 'Federation Feeder Documentation', ['Leif Johansson'], 1)]
 
 # If true, show URL addresses after external links.
 # man_show_urls = False
@@ -236,9 +234,15 @@ man_pages = [
 # (source start file, target name, title, author,
 #  dir menu entry, description, category)
 texinfo_documents = [
-    ('index', 'FederationFeeder', 'Federation Feeder Documentation',
-     'Leif Johansson', 'FederationFeeder', 'One line description of project.',
-     'Miscellaneous'),
+    (
+        'index',
+        'FederationFeeder',
+        'Federation Feeder Documentation',
+        'Leif Johansson',
+        'FederationFeeder',
+        'One line description of project.',
+        'Miscellaneous',
+    ),
 ]
 
 # Documents to append as an appendix to all manuals.
